manifests-failed/intel-device-plugins-operator-0.30.0.tgz-manifest.yaml
---
# Source: intel-device-plugins-operator/templates/operator.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: inteldeviceplugins-controller-manager-metrics-service
  namespace: "intel-device-plugins-operator-0.30.0.tgz"
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    control-plane: controller-manager
---
# Source: intel-device-plugins-operator/templates/operator.yaml
apiVersion: v1
kind: Service
metadata:
  name: inteldeviceplugins-webhook-service
  namespace: "intel-device-plugins-operator-0.30.0.tgz"
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    control-plane: controller-manager
---
# Source: intel-device-plugins-operator/templates/operator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: controller-manager
  name: inteldeviceplugins-controller-manager
  namespace: "intel-device-plugins-operator-0.30.0.tgz"
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
  template:
    metadata:
      labels:
        control-plane: controller-manager
    spec:
      containers:
      - args:
        image: "intel/intel-deviceplugin-operator:0.30.0"
        imagePullPolicy: IfNotPresent
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 120Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
        - --v=10
        image: "gcr.io/kubebuilder/kube-rbac-proxy:v0.16.0"
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: default
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
---
# Source: intel-device-plugins-operator/templates/operator.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: intel-device-plugins-operator-0.30.0.tgz/inteldeviceplugins-serving-cert
  name: inteldeviceplugins-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /mutate-deviceplugin-intel-com-v1-dlbdeviceplugin
  failurePolicy: Fail
  name: mdlbdeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - dlbdeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /mutate-deviceplugin-intel-com-v1-dsadeviceplugin
  failurePolicy: Fail
  name: mdsadeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - dsadeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /mutate-deviceplugin-intel-com-v1-fpgadeviceplugin
  failurePolicy: Fail
  name: mfpgadeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - fpgadeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /mutate-deviceplugin-intel-com-v1-gpudeviceplugin
  failurePolicy: Fail
  name: mgpudeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - gpudeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /mutate-deviceplugin-intel-com-v1-iaadeviceplugin
  failurePolicy: Fail
  name: miaadeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - iaadeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /mutate-deviceplugin-intel-com-v1-qatdeviceplugin
  failurePolicy: Fail
  name: mqatdeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - qatdeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /mutate-deviceplugin-intel-com-v1-sgxdeviceplugin
  failurePolicy: Fail
  name: msgxdeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - sgxdeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /pods
  failurePolicy: Ignore
  name: fpga.mutator.webhooks.intel.com
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /mutate--v1-pod
  failurePolicy: Ignore
  name: sgx.mutator.webhooks.intel.com
  reinvocationPolicy: IfNeeded
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
---
# Source: intel-device-plugins-operator/templates/operator.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: intel-device-plugins-operator-0.30.0.tgz/inteldeviceplugins-serving-cert
  name: inteldeviceplugins-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /validate-deviceplugin-intel-com-v1-dlbdeviceplugin
  failurePolicy: Fail
  name: vdlbdeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - dlbdeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /validate-deviceplugin-intel-com-v1-dsadeviceplugin
  failurePolicy: Fail
  name: vdsadeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - dsadeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /validate-deviceplugin-intel-com-v1-fpgadeviceplugin
  failurePolicy: Fail
  name: vfpgadeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - fpgadeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /validate-deviceplugin-intel-com-v1-gpudeviceplugin
  failurePolicy: Fail
  name: vgpudeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - gpudeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /validate-deviceplugin-intel-com-v1-iaadeviceplugin
  failurePolicy: Fail
  name: viaadeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - iaadeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /validate-deviceplugin-intel-com-v1-qatdeviceplugin
  failurePolicy: Fail
  name: vqatdeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - qatdeviceplugins
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: inteldeviceplugins-webhook-service
      namespace: "intel-device-plugins-operator-0.30.0.tgz"
      path: /validate-deviceplugin-intel-com-v1-sgxdeviceplugin
  failurePolicy: Fail
  name: vsgxdeviceplugin.kb.io
  rules:
  - apiGroups:
    - deviceplugin.intel.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - sgxdeviceplugins
  sideEffects: None
